application/database/hadoop/hdfs/by-service/namenode.service.hadoop.yaml
apiVersion: v1
kind: Service
metadata:
  name: namenode
  namespace: hadoop
  labels:
    app: namenode
spec:
  type: NodePort
  ports:
  - name: http
    port: 50070
    targetPort: 50070
    nodePort: 30070
  - name: ipc
    port: 9000
    targetPort: 9000
    nodePort: 30090
  selector:
    app: namenode
